--- a/order-service-dev.yml
+++ b/order-service-dev.yml
@@ -1,1 +1,17 @@
+server:
+  port: ${PORT:8771}
 
+spring:
+  application:
+    name: order-service
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+
+feign:
+  hystrix:
+    enabled: true
+    
+num: 100
