--- a/order-service-dev.yml
+++ b/order-service-dev.yml
@@ -4,6 +4,22 @@ server:
 spring:
   application:
     name: order-service
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+  cloud:
+    bus:
+      enabled: true
+      trace:
+        enabled: true
+        
+management:
+  endpoints:
+    web:
+      exposure:
+        include: bus-refresh
 
 eureka:
   client:
